# whi_interfaces

./: CMakeLists.txt  README.md  package.xml
action/: PoseRegistration.action
msg/: WhiAmrLed.msg  WhiBattery.msg  WhiBoundingBox.msg  WhiBoundingBoxes.msg  WhiEng.msg  WhiIndicator.msg  WhiJointPose.msg  WhiLineChart2D.msg  WhiMotionInterface.msg  WhiMotionState.msg  WhiPartialDischarge.msg  WhiRcState.msg  WhiTaskState.msg  WhiTcpPose.msg  WhiTemperatureHumidity.msg  WhiVectorFloat.msg
srv/: WhiIo.srv  WhiSrvArmEncoder.srv  WhiSrvCurrentTcpPose.srv  WhiSrvDepth.srv  WhiSrvIndicator.srv  WhiSrvIo.srv  WhiSrvJointNames.srv  WhiSrvJointPose.srv  WhiSrvMotionOffsets.srv  WhiSrvPartialDischarge.srv  WhiSrvQrOffset.srv  WhiSrvQrcode.srv  WhiSrvRead.srv  WhiSrvReadDischarge.srv  WhiSrvSerial.srv  WhiSrvTcpDifference.srv  WhiSrvTcpPose.srv  WhiSrvTemperatureHumidity.srv
